syntax = "proto3";
package authorization;

service micro {
  rpc CreatePermission (Permission) returns (Empty) {}
  rpc UpdatePermission (Permission) returns (Empty) {}
  rpc DeletePermission (PermissionID) returns (Empty) {}
  rpc FindPermission (PermissionID) returns (Permission) {}
  rpc ListPermission (Empty) returns (PermissionList) {}

  rpc CreateActivity (Activity) returns (Empty) {}
  rpc UpdateActivity (Activity) returns (Empty) {}
  rpc DeleteActivity (ActivityID) returns (Empty) {}
  rpc FindActivity (ActivityID) returns (Activity) {}
  rpc ListActivity (Empty) returns (ActivityList) {}

  rpc AssignPermission (AssignRequest) returns (Empty) {}
  rpc FetchPermissions (RolesID) returns (PermissionList) {}
  rpc Authorize (AuthorizeRequest) returns (Response) {}
}

enum Method {
  POST = 0;
  GET = 1;
  PATCH = 2;
  PUT = 3;
  DELETE = 4;
}

message Empty {}

message AuthorizeRequest {
  string url = 1;
  Method method = 2;
  repeated int32 permission_ids = 3;
}

message Permission {
  int32 id = 1;
  string name = 2;
  repeated Activity activities = 3;
  string created_at = 4;
  string updated_at = 5;
}

message PermissionID {
  int32 id = 1;
}

message PermissionList {
  repeated Permission permissions = 1;
}

message PermissionIdList {
  repeated int32 permission_ids = 1;
}

message Activity {
  int32 id = 1;
  string url = 2;
  Method method = 3;
  int32 permission_id = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ActivityID {
  int32 id = 1;
}

message RolesID {
  repeated int32 ids = 1;
}

message AssignRequest {
  int32 id = 1;
  int32 role_id = 2;
  int32 permission_id = 3;
}

message ActivityList {
  repeated Activity activities = 1;
}

message Response {
  bool response = 1;
}
